--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "globals": "^15.15.0",
     "tailwindcss": "^4.1.3",
     "vite": "^6.2.0"
+  },
+  "engines": {
+    "node": "20.19.0"
   }
 }
